css/custom.css
/* ... */
.typographic .icon-point {
	color:#8ed4cc;
}
.typographic .cu_pds_2 span  {
	color:#757575!important;
	font-size:3em;
}

.error404 .body_wrap {
	background: url(../images/1170x700.jpg) center center no-repeat fixed;
	background-color: #ffffff;
}
.videopg .sc_title {
	margin-bottom:1em;
	text-align:center;
}
.videopg .sc_line {
	margin-top:3em;
	margin-bottom:6em;
	border-top-style:solid;
}
.videopg .sc_video_frame {
	margin-bottom:3em;
	width:100%;
}
.videopg .sc_button_square {
	margin-top:3em;
	margin-bottom:2em;
}

.supportpg .sc_section {
	margin-top:large;
	margin-bottom:large;
}

.faqpg .sc_accordion {
	margin-bottom:5em;
}
.faqpg .widget_text .search_form {
	margin-bottom: 1.15em;
}

.single-team .sc_columns_count_3 {
	margin-top: 6.7em!important; 
	margin-bottom: 7em!important;
}
.single-team .sc_column_item {
	margin-right: -3px;
}
.single-team .sc_title {
	margin-top: -0.2em; 
	margin-bottom: 1.2em;; 
}

.shortcodespg .sc_tabs,
.shortcodespg .sc_accordion {
	margin-bottom:4em;
}
.shortcodespg .sc_section_content_wrap .buttonup {
	margin-right:10px!important;
	margin-bottom:1rem!important;
	margin-left:10px!important;
}
.shortcodespg .sc_section_content_wrap .column-1_3 .sc_button_square {
	box-sizing: border-box;
	margin-bottom:1rem;
	width:100%;
}
.sc_button.dark {
	background-color:#323232!important; 
	border-color:#323232!important;
}
.sc_button.blue {
	background-color:#8ed4cc!important;
	border-color:#8ed4cc!important;
}
.shortcodespg .sc_googlemap {
	width:100%;
	height:450px;
}
.shortcodespg .sc_quote {
	margin-top:1.3em;
	margin-right:auto;
	margin-bottom:1.6em;
	margin-left:auto;
	width:830px;
}
.shortcodespg #sw_slide1 {
	background-image:url(../images/1170x700.jpg);
}
.shortcodespg #sw_slide2 {
	background-image:url(../images/1170x700.jpg);
}
.shortcodespg #sw_slide3 {
	background-image:url(../images/1170x700.jpg);
}

#sc_skills_diagram_372 .sc_skills_count {
	background-color:#000000; 
	border-color:#000000
}
#sc_skills_diagram_935 .sc_skills_item.odd .sc_skills_count {
	background-color:#8ed4cc;
	border-color:#8ed4cc
}
#sc_skills_diagram_935 .sc_skills_item.even .sc_skills_count {
	background-color:#F9A392; 
	border-color:#F9A392;
}
.gpolaroid .soc_low {
	display: block; 
	text-align: center;
	margin-top:3.4em;
	margin-bottom:2.75em;
}

.services2 .sc_services_type_icons,
.services1 .sc_call_to_action,
.services1 .sc_testimonials,
.services1 .swiper-slide,
.aboutus .sc_testimonials,
.aboutus .swiper-slide,
.aboutus2 .swiper-slide,
.aboutus2 .sc_testimonials,
.aboutus2 .sc_call_to_action,
.certificates .swiper-slide,
.certificates .sc_testimonials,
.single-team .sc_testimonials,
.single-team .swiper-slide,
.single-team .sc_call_to_action,
.ourpricing .sc_menuitems_style_menuitems-1,
.ourstaff .sc_call_to_action,
.home3 .sc_clients,
.home3 .swiper-slide,
.shortcodespg .sc_video_frame,
.shortcodespg .swiper-slide,
.shortcodespg .sc_slider_swiper {
	width:100%;
}

/* Fix: 3 tamne kartice - bypass isotope, direktni flexbox layout */
#sc_blogger_933 .isotope_wrap {
    display: flex !important;
    flex-wrap: wrap !important;
    position: relative !important;
    height: auto !important;
}
#sc_blogger_933 .isotope_wrap .isotope_item {
    opacity: 1 !important;
    filter: alpha(opacity=100) !important;
    position: relative !important;
    left: auto !important;
    top: auto !important;
    transform: none !important;
    width: 33.333% !important;
    float: none !important;
}

